--- a/www/src/coretype/seq.html
+++ b/www/src/coretype/seq.html
@@ -26,7 +26,7 @@
   "type": "//rec",
   "required": {
     "type": { "type": "//str", "value": "//seq" },
-    "contents": { "type": "//arr", "value": "/.meta/schema" }
+    "contents": { "type": "//arr", "contents": "/.meta/schema" }
   },
   "optional": {
     "tail": "/.meta/schema"
